# web_chat

./: .dockerignore  .env.test  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt
api/: chat.py  dependencies.py  users.py
app/: main.py
app/api/: chat.py  dependencies.py  users.py
app/api/schemas/: chat.py  users.py
app/application/: exceptions.py
app/infrastructure/: config.py  database.py
app/tests/: conftest.py
application/services/: chat.py  user.py
application/unit_of_work/: unit_of_work.py
application/websocket/: websocket_manager.py
chat/: crud.py  models.py  views.py  websocket_manager.py
frontend/css/: chat-styles.css  chats.css  login-styles.css  profile-styles.css  registration-styles.css  styles.css  update-profile.css  user-friends.css  user-profile.css
frontend/html/: 404.html  chat.html  chats.html  error.html  login.html  profile.html  register.html  update-profile.html  user-friends.html  user-profile.html
frontend/js/: chat.js  chats.js  login.js  logout.js  profile.js  registration.js  update-profile.js  user-friends.js  user-profile.js
infrastructure/: celery_settings.py  config.py  database.py
infrastructure/auth/: auth_manager.py
infrastructure/models/: chat.py  users.py
infrastructure/repositories/: base.py  messages.py  room.py  user.py
infrastructure/task_manager/: tasks.py
infrastructure/utils/: file_utils.py  other.py
migrations/: env.py
migrations/versions/: 2824ad7bc088_update_message_text_column_type.py  9190aa299607_add_field_confirm_email.py  c9c67cc4b417_initial.py  e8680fa13531_add_user_id_field_in_messages.py  fba2049d49b5_start.py
nginx/: Dockerfile  nginx.conf
users/: auth.py  crud.py  models.py  schemas.py  views.py
(+36 files in other folders)
